--- a/conda_build_config.yaml
+++ b/conda_build_config.yaml
@@ -3,10 +3,11 @@ c_compiler:
   - clang                      # [osx]
   - vs2022                     # [win]
 c_compiler_version:            # [unix]
-  - 13                         # [linux]
-  - 18                         # [osx]
+  - 14                         # [linux]
+  - 19                         # [osx]
   # CUDA 12.4 on PPC does not support GCC 13
   - 12                         # [linux and ppc64le and os.environ.get("CF_CUDA_ENABLED", "False") == "True"]
+  # CUDA 12.6 doesn't support GCC 14
   - 13                         # [linux and not ppc64le and os.environ.get("CF_CUDA_ENABLED", "False") == "True"]
 c_stdlib:
   - sysroot                    # [linux]
@@ -25,34 +26,34 @@ cxx_compiler:
   - clangxx                    # [osx]
   - vs2022                     # [win]
 cxx_compiler_version:          # [unix]
-  - 13                         # [linux]
-  - 18                         # [osx]
+  - 14                         # [linux]
+  - 19                         # [osx]
   - 12                         # [linux and ppc64le and os.environ.get("CF_CUDA_ENABLED", "False") == "True"]
   - 13                         # [linux and not ppc64le and os.environ.get("CF_CUDA_ENABLED", "False") == "True"]
 llvm_openmp:                   # [osx]
-  - 18                         # [osx]
+  - 19                         # [osx]
 fortran_compiler:              # [unix or win64]
   - gfortran                   # [linux64 or (osx and x86_64)]
   - gfortran                   # [aarch64 or ppc64le or armv7l or s390x]
   - flang                      # [win64]
 fortran_compiler_version:      # [unix or win64]
-  - 13                         # [linux]
-  - 13                         # [osx]
+  - 14                         # [linux]
+  - 14                         # [osx]
   - 5                          # [win64]
   - 12                         # [linux and ppc64le and os.environ.get("CF_CUDA_ENABLED", "False") == "True"]
   - 13                         # [linux and not ppc64le and os.environ.get("CF_CUDA_ENABLED", "False") == "True"]
 m2w64_c_compiler:                 # [win]
   - gcc                           # [win]
 m2w64_c_compiler_version:         # [win]
-  - 13                            # [win]
+  - 14                            # [win]
 m2w64_cxx_compiler:               # [win]
   - gxx                           # [win]
 m2w64_cxx_compiler_version:       # [win]
-  - 13                            # [win]
+  - 14                            # [win]
 m2w64_fortran_compiler:           # [win]
   - gfortran                      # [win]
 m2w64_fortran_compiler_version:   # [win]
-  - 13                            # [win]
+  - 14                            # [win]
 
 cuda_compiler:
   - cuda-nvcc
@@ -192,7 +193,7 @@ blas_impl:
   - blis         # [x86 or x86_64]
 
 ace:
-  - 8.0.2
+  - 8.0.4
 alsa_lib:
   - '1.2'
 antic:
@@ -212,39 +213,39 @@ aws_c_auth:
 aws_c_cal:
   - 0.9.2
 aws_c_common:
-  - 0.12.3
+  - 0.12.4
 aws_c_compression:
   - 0.3.1
 aws_c_event_stream:
-  - 0.5.4
+  - 0.5.5
 aws_c_http:
-  - 0.10.2
+  - 0.10.4
 aws_c_io:
-  - 0.20.1
+  - 0.21.2
 aws_c_mqtt:
-  - 0.13.1
+  - 0.13.3
 aws_c_s3:
-  - 0.8.1
+  - 0.8.6
 aws_c_sdkutils:
   - 0.2.4
 aws_checksums:
   - 0.2.7
 aws_crt_cpp:
-  - 0.32.8
+  - 0.33.1
 aws_sdk_cpp:
-  - 1.11.510
+  - 1.11.606
 azure_core_cpp:
-  - 1.14.0
+  - 1.16.0
 azure_identity_cpp:
-  - 1.10.0
+  - 1.12.0
 azure_storage_blobs_cpp:
-  - 12.13.0
+  - 12.14.0
 azure_storage_common_cpp:
-  - 12.8.0
+  - 12.10.0
 azure_storage_files_datalake_cpp:
   - 12.12.0
 azure_storage_files_shares_cpp:
-  - 12.11.0
+  - 12.14.0
 azure_storage_queues_cpp:
   - 12.4.0
 bullet_cpp:
@@ -254,7 +255,7 @@ bzip2:
 c_ares:
   - 1
 c_blosc2:
-  - '2.18'
+  - '2.19'
 cairo:
   - 1
 capnproto:
@@ -362,7 +363,7 @@ glpk:
 gmp:
   - 6
 google_cloud_cpp:
-  - '2.36'
+  - '2.39'
 google_cloud_cpp_common:
   - 0.25.0
 googleapis_cpp:
@@ -419,17 +420,17 @@ libaec:
 libamd:
   - '3'
 libarchive:
-  - '3.7'
+  - '3.8'
 libarrow:
+  - '21.0'
   - '20.0'
   - '19.0'
   - '18.1'
-  - '17.0'
 libarrow_all:
+  - '21.0'
   - '20.0'
   - '19.0'
   - '18.1'
-  - '17.0'
 libavif:
   - 1
 libblitz:
@@ -485,43 +486,43 @@ libframel:
 libgit2:
   - '1.9'
 libgoogle_cloud:
-  - '2.36'
+  - '2.39'
 libgoogle_cloud_devel:
-  - '2.36'
+  - '2.39'
 libgoogle_cloud_all_devel:
-  - '2.36'
+  - '2.39'
 libgoogle_cloud_aiplatform_devel:
-  - '2.36'
+  - '2.39'
 libgoogle_cloud_automl_devel:
-  - '2.36'
+  - '2.39'
 libgoogle_cloud_bigquery_devel:
-  - '2.36'
+  - '2.39'
 libgoogle_cloud_bigtable_devel:
-  - '2.36'
+  - '2.39'
 libgoogle_cloud_compute_devel:
-  - '2.36'
+  - '2.39'
 libgoogle_cloud_dialogflow_cx_devel:
-  - '2.36'
+  - '2.39'
 libgoogle_cloud_dialogflow_es_devel:
-  - '2.36'
+  - '2.39'
 libgoogle_cloud_discoveryengine_devel:
-  - '2.36'
+  - '2.39'
 libgoogle_cloud_dlp_devel:
-  - '2.36'
+  - '2.39'
 libgoogle_cloud_iam_devel:
-  - '2.36'
+  - '2.39'
 libgoogle_cloud_oauth2_devel:
-  - '2.36'
+  - '2.39'
 libgoogle_cloud_policytroubleshooter_devel:
-  - '2.36'
+  - '2.39'
 libgoogle_cloud_pubsub_devel:
-  - '2.36'
+  - '2.39'
 libgoogle_cloud_spanner_devel:
-  - '2.36'
+  - '2.39'
 libgoogle_cloud_speech_devel:
-  - '2.36'
+  - '2.39'
 libgoogle_cloud_storage_devel:
-  - '2.36'
+  - '2.39'
 libgrpc:
   - "1.71"
 libgsasl:
@@ -573,13 +574,13 @@ libntlm:
 libode:
   - 0.16.5
 libopencv:
-  - 4.11.0
+  - 4.12.0
 libopentelemetry_cpp:
   - '1.21'
 libosqp:
   - 1.0.0
 libopenvino_dev:
-  - 2025.0.0
+  - 2025.2.0
 libparu:
   - '1'
 libpcap:
@@ -593,7 +594,7 @@ libprotobuf:
 libpq:
   - '17'
 libpulsar:
-  - 3.7.1
+  - 3.7.2
 libraw:
   - '0.21'
 librbio:
@@ -621,7 +622,7 @@ libspqr:
 libsuitesparseconfig:
   - '7'
 libssh:
-  - 0.10
+  - '0.11'
 libssh2:
   - 1
 libsvm:
@@ -633,7 +634,7 @@ libtensorflow:
 libtensorflow_cc:
   - "2.16"
 libthrift:
-  - 0.21.0
+  - 0.22.0
 libtiff:
   - '4.7'
 libtorch:
@@ -641,7 +642,7 @@ libtorch:
 libumfpack:
   - '6'
 libunwind:
-  - '1.6'
+  - '1.8'
 libutf8proc:
   - '2.10'
 libv8:
@@ -681,7 +682,7 @@ magma:
 metis:
   - 5.1.0
 mimalloc:
-  - 3.0.1
+  - 3.1.5
 mkl:
   - '2024'  # [not osx]
   - '2023'  # [osx]
@@ -753,7 +754,7 @@ openslide:
 openssl:
   - '3'
 orc:
-  - 2.1.2
+  - 2.1.3
 pango:
   - '1'
 pari:
@@ -767,7 +768,7 @@ petsc:
 petsc4py:
   - '3.23'
 plutovg:
-  - 1.1.0
+  - 1.3.0
 plutosvg:
   - 0.0.7
 pugixml:
@@ -785,11 +786,11 @@ pcre:
 pcre2:
   - '10.45'
 pdal:
-  - 2.8.4
+  - '2.9'
 libpdal:
-  - 2.8.4
+  - '2.9'
 libpdal_core:
-  - 2.8.4
+  - '2.9'
 pixman:
   - 0
 poco:
@@ -857,19 +858,16 @@ qtkeychain:
 rav1e:
   - '0.7'
 rdma_core:
-  - '57'
+  - '58'
 re2:
   - 2024.07.02
 readline:
   - "8"
 rocksdb:
-  - '9.11'
+  - '10.4'
 root_base:
   - 6.32.10
   - 6.34.4
-ruby:
-  - 2.5
-  - 2.6
 r_base:
   - 4.3
   - 4.4
@@ -886,7 +884,7 @@ s2geography:
 s2geometry:
   - 0.11.1
 s2n:
-  - 1.5.21
+  - 1.5.23
 sdl2:
   - '2'
 sdl2_image:
@@ -928,7 +926,7 @@ tbb_devel:
 tensorflow:
   - "2.16"
 thrift_cpp:
-  - 0.21.0
+  - 0.22.0
 tinyxml2:
   - '11.0'
 tk:
@@ -958,7 +956,7 @@ vtk_base:
 wcslib:
   - '8'
 wxwidgets:
-  - 3.3.0
+  - 3.3.1
 x264:
   - '1!164.*'
 x265:
