--- a/eon/variants.yaml
+++ b/eon/variants.yaml
@@ -15,6 +15,9 @@ zip_keys:
   - metatomic_enabled
   - lammps_version
 
+c_stdlib_version:
+  - if: osx
+    then: "11.0"
 MACOSX_SDK_VERSION:
   - "11.0"
 MACOSX_DEPLOYMENT_TARGET:
