--- a/conda_build_config.yaml
+++ b/conda_build_config.yaml
@@ -5,8 +5,6 @@ c_compiler:
 c_compiler_version:            # [unix]
   - 14                         # [linux]
   - 19                         # [osx]
-  # CUDA 12.4 on PPC does not support GCC 13
-  - 12                         # [linux and ppc64le and os.environ.get("CF_CUDA_ENABLED", "False") == "True"]
   # CUDA 12.6 doesn't support GCC 14
   - 13                         # [linux and not ppc64le and os.environ.get("CF_CUDA_ENABLED", "False") == "True"]
 c_stdlib:
@@ -19,6 +17,7 @@ m2w64_c_stdlib_version:        # [win]
   - 12                         # [win]
 c_stdlib_version:              # [unix]
   - 2.17                       # [linux]
+  - 2.17                       # [linux and not ppc64le and os.environ.get("CF_CUDA_ENABLED", "False") == "True"]
   - 10.13                      # [osx and x86_64]
   - 11.0                       # [osx and arm64]
 cxx_compiler:
@@ -28,7 +27,6 @@ cxx_compiler:
 cxx_compiler_version:          # [unix]
   - 14                         # [linux]
   - 19                         # [osx]
-  - 12                         # [linux and ppc64le and os.environ.get("CF_CUDA_ENABLED", "False") == "True"]
   - 13                         # [linux and not ppc64le and os.environ.get("CF_CUDA_ENABLED", "False") == "True"]
 llvm_openmp:                   # [osx]
   - 19                         # [osx]
@@ -40,7 +38,6 @@ fortran_compiler_version:      # [unix or win64]
   - 14                         # [linux]
   - 14                         # [osx]
   - 5                          # [win64]
-  - 12                         # [linux and ppc64le and os.environ.get("CF_CUDA_ENABLED", "False") == "True"]
   - 13                         # [linux and not ppc64le and os.environ.get("CF_CUDA_ENABLED", "False") == "True"]
 m2w64_c_compiler:                 # [win]
   - gcc                           # [win]
@@ -59,11 +56,9 @@ cuda_compiler:
   - cuda-nvcc
 cuda_compiler_version:
   - None
-  - 12.4                       # [linux and ppc64le and os.environ.get("CF_CUDA_ENABLED", "False") == "True"]
   - 12.6                       # [((linux and not ppc64le) or win64) and os.environ.get("CF_CUDA_ENABLED", "False") == "True"]
 cuda_compiler_version_min:
-  - None                       # [osx]
-  - 12.4                       # [linux and ppc64le]
+  - None                       # [osx or ppc64le]
   - 12.6                       # [(linux and not ppc64le) or win64]
 
 arm_variant_type:              # [aarch64]
@@ -154,6 +149,8 @@ zip_keys:
     - c_compiler_version        # [unix]
     - cxx_compiler_version      # [unix]
     - fortran_compiler_version  # [unix]
+    # CUDA 13.x requires newer glibc than our current baseline
+    - c_stdlib_version          # [linux and os.environ.get("CF_CUDA_ENABLED", "False") == "True"]
     - cuda_compiler_version     # [linux and os.environ.get("CF_CUDA_ENABLED", "False") == "True"]
   -
     - python
@@ -193,7 +190,7 @@ blas_impl:
   - blis         # [x86 or x86_64]
 
 ace:
-  - 8.0.4
+  - 8.0.5
 alsa_lib:
   - '1.2'
 antic:
@@ -255,7 +252,7 @@ bzip2:
 c_ares:
   - 1
 c_blosc2:
-  - '2.19'
+  - '2.21'
 cairo:
   - 1
 capnproto:
@@ -295,7 +292,7 @@ dbus:
 dcap:
   - 2.47
 eclib:
-  - '20250616'
+  - '20250627'
 elfutils:
   - '0.192'
 exiv2:
@@ -311,7 +308,7 @@ flann:
 flatbuffers:
   - 24.12.23
 fmt:
-  - '10'
+  - '11.2'
 fontconfig:
   - 2
 freetype:
@@ -341,7 +338,7 @@ libgdal:
 libgdal_core:
   - '3.11'
 geos:
-  - 3.13.0
+  - 3.13.1
 geotiff:
   - '1.7'
 gfal2:
@@ -373,22 +370,26 @@ graphviz:
 # Harfbuzz guarantees total ABI compatibiblity
 # The first version to have this new ABI pin is 11.0.1
 # https://github.com/conda-forge/harfbuzz-feedstock/pull/125
-harfbuzz:
-  - '11.0.1'
+# But as of 2025/08/03, 11.0.1 is quite "old" and it is pretty safe
+# to release the pin
+# We are leaving this comment here to discourage others from adding
+# a harfbuzz global pin, as it is not needed.
+# harfbuzz:
+# - '11'
 hdf4:
   - 4.2.15
 hdf5:
   - 1.14.3
 icu:
-  - '73'
+  - '75'
 idyntree:
   - '13'
 imath:
-  - 3.1.12
+  - 3.2.1
 impi_devel:
   - "2021.14"
 ipopt:
-  - 3.14.17
+  - 3.14.19
 isl:
   - '0.26'
 jasper:
@@ -483,6 +484,14 @@ libflint:
   - '3.2'
 libframel:
   - '8.41'
+# hmaarrfk - Aug 30, 2025
+# https://github.com/conda-forge/libfuse-feedstock/pull/29
+# Although some libfuse packages exist with version 3, we decided
+# to pin libfuse to 2 to allow co-installation between libfuse (version 2) and libfuse3
+libfuse:
+  - '2'
+libfuse3:
+  - '3'
 libgit2:
   - '1.9'
 libgoogle_cloud:
@@ -586,7 +595,7 @@ libparu:
 libpcap:
   - '1.10'
 libpnetcdf:
-  - 1.14.0
+  - 1.14.1
 libpng:
   - 1.6
 libprotobuf:
@@ -702,9 +711,9 @@ msgpack_c:
 msgpack_cxx:
   - '7'
 mumps_mpi:
-  - 5.7.3
+  - 5.8.1
 mumps_seq:
-  - 5.7.3
+  - 5.8.1
 mysql_devel:
   - '9.3'
 nccl:
@@ -746,7 +755,7 @@ openh264:
 openjpeg:
   - '2'
 openjph:
-  - '0.21'
+  - '0.22'
 openmpi:
   - 4
 openslide:
@@ -754,7 +763,7 @@ openslide:
 openssl:
   - '3'
 orc:
-  - 2.1.3
+  - 2.2.0
 pango:
   - '1'
 pari:
@@ -778,7 +787,7 @@ slepc:
 slepc4py:
   - '3.23'
 svt_av1:
-  - 3.0.2
+  - 3.1.2
 p11_kit:
   - '0.24'
 pcre:
@@ -786,11 +795,11 @@ pcre:
 pcre2:
   - '10.45'
 pdal:
-  - '2.9'
+  - 2.9.1
 libpdal:
-  - '2.9'
+  - 2.9.1
 libpdal_core:
-  - '2.9'
+  - 2.9.1
 pixman:
   - 0
 poco:
@@ -804,7 +813,7 @@ postgresql:
 postgresql_plpython:
   - '17'
 proj:
-  - '9.5'
+  - '9.6'
 pulseaudio:
   - '17.0'
 pulseaudio_client:
@@ -815,16 +824,16 @@ pybind11_abi:
   - 4
 python:
   # part of a zip_keys: python, is_python_min
-  - 3.9.* *_cpython
   - 3.10.* *_cpython
   - 3.11.* *_cpython
   - 3.12.* *_cpython
+  - 3.13.* *_cp313
 python_impl:
   - cpython
 python_min:
   # minimum supported python version per CFEP-25
   # bump to next minor version when we drop python versions
-  - '3.9'
+  - '3.10'
 is_freethreading:
   - false
 is_python_min:
@@ -858,13 +867,13 @@ qtkeychain:
 rav1e:
   - '0.7'
 rdma_core:
-  - '58'
+  - '59'
 re2:
-  - 2024.07.02
+  - 2025.08.12
 readline:
   - "8"
 rocksdb:
-  - '10.4'
+  - '10.5'
 root_base:
   - 6.32.10
   - 6.34.4
@@ -872,13 +881,13 @@ r_base:
   - 4.3
   - 4.4
 libscotch:
-  - 7.0.6
+  - 7.0.8
 libptscotch:
-  - 7.0.6
+  - 7.0.8
 scotch:
-  - 7.0.6
+  - 7.0.8
 ptscotch:
-  - 7.0.6
+  - 7.0.8
 s2geography:
   - 0.1.2
 s2geometry:
@@ -904,7 +913,7 @@ soapysdr:
 sox:
   - 14.4.2
 spdlog:
-  - '1.13'
+  - '1.15'
 spirv_tools:
   - 2024
 sqlite:
@@ -936,7 +945,7 @@ tiledb:
 ucc:
   - 1
 ucx:
-  - '1.18'
+  - '1.19'
 uhd:
   - 4.8.0
 urdfdom:
@@ -950,9 +959,9 @@ vlfeat:
 volk:
   - '3.2'
 vtk:
-  - 9.3.1
+  - 9.4.2
 vtk_base:
-  - 9.3.1
+  - 9.4.2
 wcslib:
   - '8'
 wxwidgets:
